kubernetes/manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: backend-certificate-manager
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${domain}
      secretName: letsencrypt-account-key
  rules:
  - host: ${domain}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: helloworld
              port:
                number: 80
